Fixed links display on mobile (for frontpage)

--- a/site-build/front-page.css
+++ b/site-build/front-page.css
@@ -14,10 +14,16 @@ body {
 #frontpage-links {
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    @media only screen and (max-width: 600px) {
+        gap: 0px 15px;
+        flex-wrap: wrap;
+    }
+    @media only screen and (min-width: 600px) {
+        gap: 0px 30px;
+        flex-wrap: nowrap;
+    }
     align-items: center;
-    justify-content: space-between;
-    gap: 30px;
+    justify-content: center;
 
     animation: unfrost 400ms ease-out 800ms 1 normal forwards;
     filter: blur(5px);
